add the dropdown html

--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+    <div class="dropdown">dropdown
+        <button class="dropdown-btn"></button>
+        <div class="dropdown-li-ctn">
+            <div>Item 1</div>
+            <div>Item 2</div>
+            <div>Longer Item</div>
+        </div>
+    </div>
+
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa nam!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa nam!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa nam!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa nam!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa nam!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa nam!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa nam!</p>
+
 <body>
     
 </body>
