--- a/src/template.html
+++ b/src/template.html
@@ -1,38 +1,72 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-    <div class="dropdown">dropdown
-        <button class="dropdown-btn"></button>
-        <div class="dropdown-li-ctn">
-            <div>Item 1</div>
-            <div>Item 2</div>
-            <div>Longer Item</div>
-        </div>
+  </head>
+  <div class="dropdown">
+    dropdown
+    <button class="dropdown-btn"></button>
+    <div class="dropdown-li-ctn">
+      <div>Item 1</div>
+      <div>Item 2</div>
+      <div>Longer Item</div>
     </div>
+  </div>
 
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod
+    tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam
+    illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa
+    nam!
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod
+    tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam
+    illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa
+    nam!
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod
+    tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam
+    illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa
+    nam!
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod
+    tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam
+    illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa
+    nam!
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod
+    tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam
+    illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa
+    nam!
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod
+    tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam
+    illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa
+    nam!
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod
+    tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam
+    illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa
+    nam!
+  </p>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa nam!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa nam!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa nam!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa nam!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa nam!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa nam!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quod tempora temporibus consequatur incidunt, praesentium reiciendis laboriosam illum sint voluptatibus sunt quo, eum ea sed unde similique beatae, culpa nam!</p>
-
-    <div class="dropdown">dropdown
-        <button class="dropdown-btn"></button>
-        <div class="dropdown-li-ctn">
-            <div>Item 1</div>
-            <div>Item 2</div>
-            <div>Longer Item</div>
-        </div>
+  <div class="dropdown">
+    dropdown
+    <button class="dropdown-btn"></button>
+    <div class="dropdown-li-ctn">
+      <div>Item 1</div>
+      <div>Item 2</div>
+      <div>Longer Item</div>
     </div>
+  </div>
 
-<body>
-    
-</body>
+  <body></body>
 </html>
